deploy/k8s/bootstrap/access.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uar-dev
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/part-of: uar
    environment: dev
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
